--- a/main.css
+++ b/main.css
@@ -20,8 +20,9 @@ body{
             border: 1px solid black;  
             border-radius: 5px;
             .stats-bar{
-                background-color: white;
+                background-color: #ffffff;
                 display: flex;
+
                 flex-direction: row;
                 justify-content: center;
                 gap: 4em;
@@ -56,3 +57,48 @@ body{
         }
     }
 }
+
+body {
+    background-color: #000;
+    color: #fff;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+}
+
+#hamburger-menu {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+#menu-button {
+    font-size: 2em;
+    background: none;
+    border: none;
+    color: #fff;
+}
+
+#menu-content ul {
+    list-style: none;
+    padding: 0;
+}
+
+
+#game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none;
+}
+#hungerDisplay,
+#sleepDisplay,
+#funDisplay {
+    color: #000000; /* Change this to any color you prefer */
+}
+
